<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".AdminActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/uOttawaLogoLeft"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/uottawalogo"
                android:layout_gravity="start" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Administrator Panel"
                android:textColor="#060606"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/uOttawaLogoRight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/uottawalogo"
                android:layout_gravity="end" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="421dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:id="@+id/logInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Edit/Delete Requester"
                android:textColor="#060606"
                android:textSize="17dp" />


            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#000000"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:hint="FirstName"
                android:inputType="text"
                android:padding="4dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#000000"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:hint="LastName"
                android:inputType="text"
                android:padding="4dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#000000"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="5dp"
                android:hint="Email"
                android:inputType="text"
                android:padding="4dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#000000"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="1dp"
                android:hint="Password"
                android:inputType="text"
                android:padding="4dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="15dp" />

            <Button
                android:id="@+id/applyRequesterButton"
                android:layout_width="152dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:backgroundTint="#040404"
                android:padding="1dp"
                android:text="Apply Changes"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addRequesterButton"
                android:layout_width="152dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:backgroundTint="#040404"
                android:padding="1dp"
                android:text="Delete"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/returnButtonModifyDeleteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return"
        android:backgroundTint="#FF6347"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>