...
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                android:visibility="gone" />

            <!-- Existing Delete/Modify Button -->
            <Button
                android:id="@+id/senToEditDeleteRequesterButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#4F4F4F"
                android:text="Delete/Modify"
                android:textAllCaps="false"
...

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="115dp"
        android:layout_height="68dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FF6347"
        android:padding="16dp"
        android:text="Logout"
...
