<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3"
    tools:context=".AdminActivity">

    <!-- Top Banner Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/topBanner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/uOttawaLogoLeft"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/uottawalogo"
                android:layout_gravity="start" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Requester Panel"
                android:textColor="#060606"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/uOttawaLogoRight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/uottawalogo"
                android:layout_gravity="end" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Main Input Form Card with Spinners for Hardware and Software Components -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBanner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <!-- Spinner for Case -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose a Case"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/computerCase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- Spinner for Motherboard -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose a Motherboard"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/motherboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose Memory Modules"
                android:textSize="16sp" />
            <!-- Spinner for Memory Modules (up to 4) -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">

                <!-- Spinner on the right -->
                <Spinner
                    android:id="@+id/memoryStick"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:prompt="@string/select_up_to_4" />
                <!-- Input field on the left -->
                <EditText
                    android:id="@+id/inputMemoryAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Enter amount"
                    android:inputType="number" />


            </LinearLayout>

            <!-- Spinner for Hard Drives (up to 2) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose Hard Drives"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/hardDrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/select_up_to_2" />

            <!-- Spinner for Monitors (up to 3) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose Monitors"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">

                <!-- Spinner on the right -->
                <Spinner
                    android:id="@+id/monitors"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_up_to_3" />
                <!-- Input field on the left -->
                <EditText
                    android:id="@+id/inputMonitorAmount"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Enter amount"

                    android:inputType="number" />


            </LinearLayout>



            <!-- Spinner for Keyboard-Mouse Combo -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose a Keyboard-Mouse"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/keyboardMouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Spinner for Web Browser -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose a Web Browser"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/webBrowser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- Spinner for Office Suite -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose an Office Suite"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/officeSuite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!-- Spinner for Development Tools (up to 3) -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Choose Development Tools"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/developmentTools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/select_up_to_3" />

            <TextView
                android:id="@+id/errorTextNewOrderLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                android:visibility="gone" />
            <!-- Submit button -->
            <Button
                android:id="@+id/createOrderButton"
                android:layout_width="148dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#040404"
                android:paddingBottom="7dp"
                android:text="Submit"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Return Button -->
    <Button
        android:id="@+id/returnButtonCreateOrder"
        android:layout_width="90dp"
        android:layout_height="52dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FF6347"
        android:padding="2dp"
        android:text="Return"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
