...
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBanner" />

    <Button
        android:id="@+id/sendToPlaceOrderLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Place Order"
        android:backgroundTint="#4F4F4F"
        android:textColor="@android:color/white"
        android:padding="16dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:backgroundTint="#FF6347"
        android:textColor="@android:color/white"
        android:padding="16dp"
...
